# robot_interfaces_bolt

./: CHANGELOG.md  CMakeLists.txt  README.md  doc_mainpage.rst  package.xml  pyproject.toml  requirements-mypy.txt  testconfig.yml
.github/workflows/: build_master.yml  build_pr.yml  lint.yml  pr_todo_checks.yml
demos/: demo_bolthumanoid_hold.cpp  demo_bolthumanoid_simulation.py  demo_bolthumanoid_sine.py  demo_solo12_hold.cpp  demo_solo12_simulation.py  demo_solo12_sine.py
doc/: actions_and_observations.rst  apps_and_examples.rst  breathing_cat.toml  config.rst  home_offset_calibration.rst  homing.rst  installation.rst
include/robot_interfaces_bolt/: basic_types.hpp  bolthumanoid_action.hpp  bolthumanoid_config.hpp  bolthumanoid_driver.hpp  bolthumanoid_observation.hpp  bolthumanoid_pybullet_driver.hpp  bolthumanoid_types.hpp  bolthumanoid_utils.hpp
include/robot_interfaces_solo/: basic_types.hpp  bolthumanoid_config.hpp  bolthumanoid_driver.hpp  bolthumanoid_types.hpp  bolthumanoid_utils.hpp  solo12_action.hpp  solo12_config.hpp  solo12_driver.hpp  solo12_observation.hpp  solo12_pybullet_driver.hpp  solo12_types.hpp  solo12_utils.hpp  types.hpp
robot_interfaces_bolt/: bolthumanoid.pyi
scripts/: bolthumanoid_show_data.py  position_ctrl.py  solo12_show_data.py
src/: bolthumanoid_config.cpp  bolthumanoid_driver.cpp  bolthumanoid_pybullet_driver.cpp  bolthumanoid_utils.cpp  demo_solo12_hold.cpp  solo12_config.cpp  solo12_driver.cpp  solo12_pybullet_driver.cpp  solo12_utils.cpp
srcpy/: bolthumanoid.cpp  solo12.cpp
tests/: test_bolthumanoid_config.py  test_solo12_config.py
