<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interfaces_solo</name>
  <version>0.9.0</version>
  <description>Driver for using robot_interfaces with Solo12.</description>
  <maintainer email="felix.widmaier@tuebingen.mpg.de">Felix Widmaier</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>robot_interfaces</build_depend>
  <depend>solo</depend>
  <depend>real_time_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
