<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interfaces_bolt</name>
  <version>0.9.0</version>
  <description>Driver for using robot_interfaces with BoltHumanoid.</description>
  <maintainer email="felix.widmaier@tuebingen.mpg.de">Felix Widmaier</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>mpi_cmake_modules</build_depend>
  <build_depend>robot_interfaces</build_depend>

  <depend>cli_utils</depend>
  <depend>yaml_utils</depend>
  <depend>solo</depend>
  <depend>real_time_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
